tests/diagnostics_golden/diag_result_mutated.txt
Diagnostics Golden: Result Mutated
Source: tests/negative/neg_result_mutated.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_result_mutated.safe:37:17: error: access to variant field 'Value' requires established discriminant 'OK'
  |
  | 37 |          return R.Value;          -- REJECTED: R.OK no longer established
  |    |                 ^~~~~~~
  |
  note: the discriminant fact for 'R' was invalidated by assignment or an out/in out call.
------------------------------------------------------------------------
